--- a/main.css
+++ b/main.css
@@ -93,6 +93,10 @@ span {
   animation: shake-animation 4.72s ease infinite;
   transform-origin: 50% 50%;
 }
+.tokoped img {
+  max-width: 20px;
+  max-height: 25px;
+}
 @keyframes shake-animation {
   0% {
     transform: translate(0, 0);
